# stratosphere

./: .gitignore  README.md  docker-compose.yml  package-lock.json  template.env
StratospherePlugin/: .gitignore  README.md  StratospherePlugin.sln
auth/: package.json
client/: Dockerfile  README.md
database/: 0_ActualCreateDatabase.sql  1_SupplementDropDatabase.sql  2_ActualCreateTable.sql  3_ActualInsertMock.sql  4_ActualSelectAll.sql  5_TemplateGetDatavalue.sql  6_TemplateGetFilename.sql  7_TemplateInsertData.sql  README.md  init.sql
db/: Dockerfile  init.sql
frontend-app/: README.md  package-lock.json  package.json  pnpm-lock.yaml
gql/: Dockerfile  README.md  package-lock.json  package.json
graphql-server/: Dockerfile  package.json  resolvers.js  schema.js  server.js
machine-learning/: Dockerfile
ml/: .gitignore  Dockerfile  pyproject.toml
ml/db/: README.md  init.sql
ml/machine_learning/: __init__.py
ml/ml-service/: Pipfile  app.py
ml/ml-service/helper/: helper.py
ml/ml-service/models/: Models.py
ml/ml-service/models/doubles/: doubles_game_model.pkl  doubles_player_model.pkl
ml/ml-service/models/duels/: duels_game_model.pkl  duels_player_model.pkl
ml/ml-service/models/standard/: standard_game_model.pkl  standard_player_model.pkl
ml/ml-service/parsing/: parser.py
ml/ml-service/preprocessing/: CleanFrames.py
ml/ml-service/routers/: router.py
ml/training/: CreateDatasets.py  DataCleaning.py  Pipfile  README.md  TrainModels.py  data_test.ipynb  training.ipynb
ml/training/whl/: boxcars_py-0.1.15-cp38-none-win_amd64.whl
(+286 files in other folders)
